# asteroids-cpp

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/Core/: Game.hpp
include/Entities/: Asteroid.hpp  Bullet.hpp  Entity.hpp  Player.hpp
src/: main.cpp
src/Core/: Game.cpp
src/Entities/: Asteroid.cpp  Bullet.cpp  Entity.cpp  Player.cpp
